feat(fba): 扩展FBA物流功能并优化日志管理
- 新增FBA调度单据、调度项目、发货明细等数据实体和映射器
- 实现FBA调度、调度项目、发货明细等业务服务层
- 添加批量删除日志功能，支持多选删除操作
- 优化任务信息更新逻辑，支持任务组ID和任务顺序字段
- 升级Jackson依赖版本管理，覆盖Spring Boot默认版本
- 增强日志输出编码配置，确保UTF-8字符正确显示
- 新增MD5工具类用于数据加密处理
- 完善MyBatis映射文件和SQL查询语句
- 优化代码导入顺序和日志配置